--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
             <p class="py-2">New here? Do you host quiz?  <a href="/signup" class="text-green-600">Sign-up now</a></p>
             <p class="py-2">Already have an Admin account?  <a href="/login" class="text-green-600">Admin Sign-in</a></p>
             <br><br>
-            <p class="py-2">If you are a player, login here  <a href="/playerLogin" class="text-green-600">Player Sign-in</a></p>
+            <p class="py-2">If you are a player, login here  <a href="/userLogin" class="text-green-600">Player Sign-in</a></p>
         </div>
     </div>
 </body>
