--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,8 +27,8 @@
                     <label for="email">Email:</label>
                     <input type="email" name="email" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 <% } else { %>
-                    <label for="voterid">Voter ID:</label>
-                    <input type="text" name="voterid" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                    <label for="voterid">Player ID:</label>
+                    <input type="text" name="userid" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 <% } %>
             </div>  
             <div class="py-3"> 
