--- a/views/addQuestion.ejs
+++ b/views/addQuestion.ejs
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <link href="/css/styles.css" rel="stylesheet">
-    <title>Online Voting Manager</title>
+    <title>COSC Quiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         input[type=text] {
         padding: 12px 15px;
+        width: 80%;
         margin: 8px 0;
         border: 2px solid black;
         border-radius: 4px;
@@ -19,7 +20,7 @@
     <script>
         var token = document.querySelector('meta[name="csrf-token"]')
         .getAttribute("content");
-        let textBoxId = 2;
+        let textBoxId = 0;
         function addTextBox()
         {
             var t=document.createElement("input");
@@ -31,7 +32,7 @@
             var l = document.createElement("label");
             l.id = "label" + textBoxId
             l.for = id;
-            l.innerHTML = "Option " + textBoxId + ": ";
+            l.innerHTML = " Hint " + textBoxId + ": ";
             var textBox = document.getElementById(id);
             document.getElementById("optionsDiv").appendChild(l);
             document.getElementById("optionsDiv").appendChild(t);
@@ -42,9 +43,8 @@
             var t=document.getElementById("option"+textBoxId);
             var l=document.getElementById("label"+textBoxId);
             var b = document.getElementsByTagName("br")
-            if(textBoxId == 2) {
+            if(textBoxId == 0) {
                 console.log("Should have atleast two options");
-                alert("Should have atleast two options");
                 throw "Should have atleast two options";
             }
             document.getElementById("optionsDiv").removeChild(t);
@@ -65,26 +65,21 @@
                     <% } %>
                   <% } %>
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-                <input type="hidden" name="electionId" value="<%= electionId %>" />
+                <input type="hidden" name="quizId" value="<%= quizId %>" />
                 <div class="py-4">
                     <div class="py-2">
                         <label for="title">Question:</label>
-                        <input type="text" name="title" placeholder="Question Goes Here...." class="border border-gray-300 text-black-900 rounded p-2 w-full">
+                        <textarea name="title" placeholder="Question Goes Here...." class="border border-gray-300 rounded p-2 w-full"></textarea>
                     </div>
                     <div class="py-2">
-                        <label for="description">Description:</label>
-                        <textarea name="description" rows="5" placeholder="Describe your question...." class="border border-gray-300 rounded text-black-900 w-full p-2 text-sm"></textarea>
+                        <label for="answer">Answer:</label>
+                        <input type="text" name="answer" placeholder="Answer for the above question...." class="border border-gray-300 rounded w-full p-2">
                     </div>
                     <div id="optionsDiv">
-                        <% for(let i=0; i < 2; i++) { %>
-                            <label for="option<%= i+1 %>" id="label<%= i+1 %>">Option <%= i+1 %>:</label>
-                            <input type="text" name="option<%= i+1 %>" id="option<%= i+1 %>">
-                            <br>
-                        <% } %>
                     </div>
                     <div class="py-2">
-                        <button type="button" onclick="addTextBox()" class="bg-yellow-600 hover:bg-yellow-900 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Add</button>
-                        <button type="button" onclick="deleteTextBox()" class="bg-red-600 hover:bg-red-900 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Remove</button>
+                        <button type="button" onclick="addTextBox()" class="bg-yellow-600 hover:bg-yellow-900 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Add Hint</button>
+                        <button type="button" onclick="deleteTextBox()" class="bg-red-600 hover:bg-red-900 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Remove Hint</button>
                     </div>
                     <div class="py-2 centerElement">
                         <button type="submit" class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Add Question</button>
