All basic requirements are working

--- a/views/quizList.ejs
+++ b/views/quizList.ejs
@@ -35,11 +35,11 @@
                     <button class="bg-slate-300 text-black px-5 py-1.5 rounded font-medium mr-2 mb-2 w-24">Ended</button>
                 </td>
                 <% } %>
-                <td class="flex-auto">
-                    <a href="/quiz/<%= allQuiz[i].id %>/status/" class="text-green-600">
-                        Leaderboard
-                    </a>
-                </td>
+            <td class="flex-auto">
+                <a href="/quiz/<%= allQuiz[i].id %>/leaderboard" class="text-green-600">
+                    Leaderboard
+                </a>
+            </td>
         </tr>
 <% } %>
 </table>
