--- a/views/playerHome.ejs
+++ b/views/playerHome.ejs
@@ -9,7 +9,7 @@
     <title>COSC Quiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="playerhome">
     <%- include('userheader.ejs') %>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
