--- a/views/userheader.ejs
+++ b/views/userheader.ejs
@@ -1,5 +1,5 @@
 <ul class="menuBackground">
-    <li class="menuitem"><a href="/signout">Signout</a></li>
-    <li class="menuitem"><a href="/quiz">Home</a></li>
-    <li class="text-4xl font-semibold text-green-400 centerElement"><a href="/quiz">COSC Quiz</a></li>
+    <li class="menuitem"><a href="/signout" class="block py-2 pl-3 pr-4 text-white-700 rounded hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-yellow-400 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Signout</a></li>
+    <li class="menuitem"><a href="/quiz" class="block py-2 pl-3 pr-4 text-white-700 rounded hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-yellow-400 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Home</a></li>
+    <li class="text-4xl font-semibold"><a href="/quiz style=" style="color: #FACA15;">Decipher</a></li>
 </ul>
