--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -1,32 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="csrf-token" content="<%= csrfToken %>" />
-    <link href="/css/styles.css" rel="stylesheet">
-    <title>COSC Quiz</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        var token = document.querySelector('meta[name="csrf-token"]')
-        .getAttribute("content");
-    </script>
+    <title>Leaderboard UI Design</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
+
 <body>
-    <%- include('header.ejs') %>
-    <div class="grid grid-cols-6">
-        <div class="col-start-3 col-span-2">
-            <div>
-                <ul class="list-none">
-                    <% for(var i=0; i < users.length; i++) { %>
-                        <li  class="voter">
-                            <%= i+1 %>. <%= users[i].userId %> --- <%= users[i].score %>
-                        </li>
-                    <% } %>
-                </ul>
+    <section class="main-content">
+        <div class="container">
+            <h1 style="text-align: center;">Top Gainers</h1>
+            <br>
+            <br>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="leaderboard-card">
+                        <div class="leaderboard-card__top">
+                            <h3 class="text-center">$1,051</h3>
+                        </div>
+                        <div class="leaderboard-card__body">
+                            <div class="text-center circle-img mb-2" >
+                                <p style="font-size: 50px;">&#128526;</p>
+                                <h5 class="mb-0">Sandeep Sandy</h5>
+                                <p class="text-muted mb-0">@sandeep</p>
+                                <hr>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
+                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="leaderboard-card leaderboard-card--first">
+                        <div class="leaderboard-card__top">
+                            <h3 class="text-center">$1,254</h3>
+                        </div>
+                        <div class="leaderboard-card__body">
+                            <div class="text-center circle-img mb-2">
+                                <p style="font-size: 50px;">&#128513;</p>
+                                <h5 class="mb-0">Kiran Acharya</h5>
+                                <p class="text-muted mb-0">@kiranacharyaa</p>
+                                <hr>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
+                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="leaderboard-card">
+                        <div class="leaderboard-card__top">
+                            <h3 class="text-center">$1,012</h3>
+                        </div>
+                        <div class="leaderboard-card__body">
+                            <div class="text-center circle-img mb-2">
+                            <p style="font-size: 50px;">&#128512;</p>
+                                <h5 class="mb-0">John doe</h5>
+                                <p class="text-muted mb-0">@johndoe</p>
+                                <hr>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
+                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
+            <h4>All Users</h4>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>User</th>
+                        <th>Score</th>
+                        <th>Email</th>
+                        <th>Congratulate</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for(var i=0; i < users.length; i++) { %>
+                    <tr>
+                        <td>
+                            <div class="d-flex align-items-center">
+                                <img src="img/user1.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                                <div class="user-info__basic">
+                                    <h5 class="mb-0"><%= users[i].userId %></h5>
+                                    <p class="text-muted mb-0">@kiranacharyaa</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="d-flex align-items-baseline">
+                                <h4 class="mr-1"><%= users[i].score %></h4><small class="text-success"><i
+                                        class="fa fa-arrow-up"></i>5%</small>
+                            </div>
+                        </td>
+                        <td>kiran@kiranmail.com</td>
+                        <td>
+                            <button class="btn btn-success btn-sm">Congratulate</button>
+                        </td>
+                    </tr>
+                    <% } %>
+                </tbody>
+            </table>
         </div>
-    </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
