--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -16,98 +16,102 @@
             <h1 style="text-align: center;">Top Gainers</h1>
             <br>
             <br>
-
             <div class="row">
-                <div class="col-sm-4">
-                    <div class="leaderboard-card">
-                        <div class="leaderboard-card__top">
-                            <h3 class="text-center">$1,051</h3>
-                        </div>
-                        <div class="leaderboard-card__body">
-                            <div class="text-center circle-img mb-2" >
-                                <p style="font-size: 50px;">&#128526;</p>
-                                <h5 class="mb-0">Sandeep Sandy</h5>
-                                <p class="text-muted mb-0">@sandeep</p>
-                                <hr>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
-                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                <% if(users.length >= 2) { %>
+                    <div class="col-sm-4">
+                        <div class="leaderboard-card">
+                            <div class="leaderboard-card__top">
+                                <h3 class="text-center"><%= users[1].score %></h3>
+                            </div>
+                            <div class="leaderboard-card__body">
+                                <div class="text-center circle-img mb-2" >
+                                    <p style="font-size: 50px;">&#128513;</p>
+                                    <h5 class="mb-0"><%= users[1].userId %></h5>
+                                    <hr>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span><i class="fa fa-map-marker"></i> <%= users[1].time %></span>
+                                        <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="leaderboard-card leaderboard-card--first">
-                        <div class="leaderboard-card__top">
-                            <h3 class="text-center">$1,254</h3>
-                        </div>
-                        <div class="leaderboard-card__body">
-                            <div class="text-center circle-img mb-2">
-                                <p style="font-size: 50px;">&#128513;</p>
-                                <h5 class="mb-0">Kiran Acharya</h5>
-                                <p class="text-muted mb-0">@kiranacharyaa</p>
-                                <hr>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
-                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                <% } %>
+                <% if(users.length >= 1) { %>
+                    <div class="col-sm-4">
+                        <div class="leaderboard-card leaderboard-card--first">
+                            <div class="leaderboard-card__top">
+                                <h3 class="text-center"><%= users[0].score %></h3>
+                            </div>
+                            <div class="leaderboard-card__body">
+                                <div class="text-center circle-img mb-2">
+                                    <p style="font-size: 50px;">&#128526;</p>
+                                    <h5 class="mb-0"><%= users[0].userId %></h5>
+                                    <hr>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span><i class="fa fa-map-marker"></i> <%= users[0].time %></span>
+                                        <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="leaderboard-card">
-                        <div class="leaderboard-card__top">
-                            <h3 class="text-center">$1,012</h3>
-                        </div>
-                        <div class="leaderboard-card__body">
-                            <div class="text-center circle-img mb-2">
-                            <p style="font-size: 50px;">&#128512;</p>
-                                <h5 class="mb-0">John doe</h5>
-                                <p class="text-muted mb-0">@johndoe</p>
-                                <hr>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <span><i class="fa fa-map-marker"></i> Bangalore</span>
-                                    <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                <% } %>
+                <% if(users.length >= 3) { %>
+                    <div class="col-sm-4">
+                        <div class="leaderboard-card">
+                            <div class="leaderboard-card__top">
+                                <h3 class="text-center"><%= users[2].score %></h3>
+                            </div>
+                            <div class="leaderboard-card__body">
+                                <div class="text-center circle-img mb-2">
+                                    <p style="font-size: 50px;">&#128512;</p>
+                                    <h5 class="mb-0"><%= users[2].userId %></h5>
+                                    <hr>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <span><i class="fa fa-map-marker"></i> <%= users[2].time %></span>
+                                        <button class="btn btn-outline-success btn-sm">Congratulate</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                <% } %>
             </div>
 
 
-            <h4>All Users</h4>
+            <h4>All Other Players</h4>
+            <% let emojis = [128513, 128526, 128522]
+            let emojiCount = emojis.length %>
 
             <table class="table">
                 <thead>
                     <tr>
+                        <th>Rank</th>
                         <th>User</th>
                         <th>Score</th>
-                        <th>Email</th>
+                        <th>Time</th>
                         <th>Congratulate</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <% for(var i=0; i < users.length; i++) { %>
+                    <% for(var i=3; i < users.length; i++) { %>
                     <tr>
+                        <td><%= i+1 %></td>
                         <td>
                             <div class="d-flex align-items-center">
-                                <img src="img/user1.jpg" class="circle-img circle-img--small mr-2" alt="User Img">
+                                <p style="font-size: 45px;">&#<%= emojis[i % emojiCount] %>;</p>
                                 <div class="user-info__basic">
                                     <h5 class="mb-0"><%= users[i].userId %></h5>
-                                    <p class="text-muted mb-0">@kiranacharyaa</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="d-flex align-items-baseline">
-                                <h4 class="mr-1"><%= users[i].score %></h4><small class="text-success"><i
-                                        class="fa fa-arrow-up"></i>5%</small>
+                                <h4 class="mr-1"><%= users[i].score %></h4>
                             </div>
                         </td>
-                        <td>kiran@kiranmail.com</td>
+                        <td><%= users[i].time %></td>
                         <td>
                             <button class="btn btn-success btn-sm">Congratulate</button>
                         </td>
