--- a/views/playerHome.ejs
+++ b/views/playerHome.ejs
@@ -22,7 +22,7 @@
               <% } %>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="py-3">
-                <label for="quizKey">Key:</label>
+                <label for="quizKey">Quiz Key:</label>
                 <input type="text" name="quizKey" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
             </div>
             <div class="py-3 centerElement"> 
