--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>COSC Quiz</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <style>
         @import url(//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css);
@@ -22,13 +22,15 @@
 
     <div class="main-content">
         <i class="fa fa-check main-content__checkmark" id="checkmark"></i>
-        <p class="main-content__body" data-lead-id="main-content-body">Thanks a bunch for filling that out. It means a
+        <p class="main-content__body" data-lead-id="main-content-body">Thanks a bunch for participation. It means a
             lot to us, just like you do! We really appreciate you giving us a moment of your time today. Thanks for
             being you.</p>
+        <h3>Your Score: <%= score %></h3>
+        <h3>Time Taken: <%= time %></h3>
     </div>
 
     <footer class="site-footer" id="footer">
-        <p class="site-footer__fineprint" id="fineprint">Copyright ©2014 | All Rights Reserved</p>
+        <p class="site-footer__fineprint" id="fineprint">Copyright ©2023 | All Rights Reserved</p>
     </footer>
 </body>
 
