--- a/views/newQuiz.ejs
+++ b/views/newQuiz.ejs
@@ -30,8 +30,8 @@
                 <input type="text" name="key" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
             </div>  
             <div class="py-3"> 
-                <label for="timer">Time limit for each question:</label>
-                <input type="text" name="timer" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
+                <label for="timer">Time limit for entire quiz in seconds:</label>
+                <input type="text" name="timer" class="border border-gray-300 text-gray-900 rounded p-2 w-full" value="1200">
             </div>
             <div class="py-3"> 
                 <label for="score">Score for each question:</label>
