--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -109,13 +109,6 @@ td {
     color: #FACA15;
 }
 
-.thankyoy{
-  background-image: url('bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #FACA15;
-}
-
 .question{
   background-image: url('bg.png');
     background-repeat: no-repeat;
@@ -132,4 +125,28 @@ border-left: 6px solid #FACA15;
   left: 10%;
   margin-left: -3px;
   
+}
+
+.centerQuestion {
+  position: relative;
+    left:10%;
+    top:20%;
+}
+
+.shakeDiv {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: 1;
+  overflow-x: hidden;
+}
+
+@keyframes shake {
+  0% { transform: translate(7px); }
+  20% { transform: translate(-7px) ; }
+  40% { transform: translate(7px); }
+  60% { transform: translate(-7px) ; }
+  80% { transform: translate(7px) ; }
+  100% { transform: translate(-7px); }
 }
