--- a/views/question.ejs
+++ b/views/question.ejs
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <link href="/css/styles.css" rel="stylesheet">
-    <title>COSC Quiz</title>
+    <title>Decipher</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         var token = document.querySelector('meta[name="csrf-token"]').getAttribute("content");
         function fetchHint(questionId)
         {
+            let conf = confirm("Each hint will decrease the value(score) of current question. Are you sure you want a hint? Press cancel if you don't need it or else Press Ok to het the hint");
+            if(conf == false) {
+                return 0
+            }
             fetch(`/quiz/${questionId}/hint`, {
                 method: "get",
                 headers: {"Content-Type": "text/html"}
@@ -57,7 +61,7 @@
         
 </head>
 
-<body class="question">
+<body class="question" id="bodyid">
     <%- include('userheader.ejs') %>
     <div class="grid grid-cols-6">
         <div class="col-start-1 col-span-1">
@@ -73,14 +77,17 @@
         </div>
         <div class="v1"></div>
         <div class="col-start-2 col-span-3">
-            <!-- <a href="/quiz/<%= quizKey %>/all"> <== All Questions</a> -->
-            
+        <div class="centerQuestion">
             <form method="post" action="/submitAnswer">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                 <input type="hidden" name="questionId" value="<%= question.id %>">
                 <% if(messages && messages.error && messages.error.length > 0)  { %>
                     <% for(var i=0; i<messages.error.length; i++) { %>
                         <p class="flash-error"> <%= messages.error[i] %></p>
+                        <script>
+                            var bo = document.getElementById("bodyid")
+                            bo.classList.add("shakeDiv");
+                        </script>
                     <% } %>
                   <% } %>
                 <% if(messages && messages.success && messages.success.length > 0)  { %>
@@ -94,18 +101,26 @@
                     <% for(var i=0; i < noOfHints; i++) { %>
                         <p>Hint <%= i+1 %>: <%= hints[i] %></p>
                     <% } %>
+                </div>
+                <div class="py-2">
                     <label for="answer">Answer:</label>
                     <input type="text" name="answer" class="border border-gray-300 text-gray-900 rounded p-2 w-full">
                 </div>
                 <div class="py-3 centerElement"> 
-                    <button type="button" onclick="fetchHint(<%= question.id %>)" value="Hint" class="tex>t-white bg-yellow-600 hover:bg-yellow-800 font-medium rounded px-5 py-2">Hint</button>
+                    <button type="button" onclick="fetchHint(<%= question.id %>)" value="Hint" class="tex>t-white bg-yellow-400 hover:bg-yellow-800 font-medium text-black rounded px-5 py-2">Hint</button>
                 </div>
                 <div class="py-3 centerElement"> 
                     <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Submit</button>        
                 </div>
             </form>
         </div>
-        <p id="timer" class="text-lg col-start-6 col-span-1"></p>
+        </div>
+        <div class="col-start-6 col-span-1">
+            <p id="timer" class="text-xl text-white py-3"></p>
+            <p class="py-2">Your Score: <%= score %></p>
+            <p class="py-2">Question Value: <%= questionValue %></p>
+        </div>
+        
     </div>
 </body>
 </html>
