--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>COSC Quiz</title>
+    <title>Decipher</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <style>
         @import url(//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css);
@@ -15,7 +15,7 @@
     <script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/html5shiv.js"></script>
 </head>
 
-<body class="thankyou">
+<body class="bodyst">
     <header class="site-header" id="header">
         <h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
     </header>
@@ -29,9 +29,6 @@
         <h3>Time Taken: <%= time %></h3>
     </div>
 
-    <footer class="site-footer" id="footer">
-        <p class="site-footer__fineprint" id="fineprint">Copyright ©2023 | All Rights Reserved</p>
-    </footer>
 </body>
 
 </html>
