--- a/views/playerHome.ejs
+++ b/views/playerHome.ejs
@@ -44,8 +44,8 @@
                 <li>Initially each team of 2 players will be given a username and a password where they have to login</li>
                 <li>Once the team logs in, they will be asked to enter the quiz key which will be shared by the coordinators/volunteers.</li>
                 <li class="font-bold">The timer begins immediately after entering the quiz key and clicking on start</li>
-                <li>During the task, if the players finds the activity difficult they can use hints</li>
-                <li>For each task provide 2 hints will be provided, which can be used by the players based on their requirement.</li> 
+                <li>During the task, if the players find the activity difficult they can use hints</li>
+                <li>For each task 2 hints will be provided, which can be used by the players based on their requirement.</li> 
                 <li class="font-bold">Note: When a player uses a hint, the maximum points that can be obtained by that question gets reduced (The question loses its worth for every hint used)</li>
                 <li>For every question, click on the Submit button to submit and check your answer</li>
                 <li>Each question can be submitted any number of times</li>
