Display Question as points

--- a/views/question.ejs
+++ b/views/question.ejs
@@ -103,7 +103,7 @@
                         <% let questionParts = question.title.split("\r\n"); %>
                         <ol>
                         <% for(var i=0; i < questionParts.length; i++) { %>
-                            <li class="text-xl font-bold"><%= i+1 %>. <%= questionParts[i] %></li>
+                            <li class="text-xl font-bold"><%= questionParts[i] %></li>
                         <% } %>
                         </ol>
                     <% } %>
